made calendar data range save when switching pages in calender and fixed daily log css so that there is no overlap

--- a/src/log.css
+++ b/src/log.css
@@ -29,10 +29,12 @@
     padding: 30px;
     border-radius: 10px;
     box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+    max-width: 500px;
   }
   
   .left {
     flex: 2;
+    max-width: 150px;
   }
 
   .left textarea {
@@ -46,9 +48,16 @@
     line-height: 1.6;
     outline: none;
     box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
+    max-width: 60px;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    white-space: pre-wrap;
   }
   
-  
+  .left p {
+    overflow-wrap: anywhere;
+    word-break: break-word;
+  }
   .right {
     flex: 1;
     display: flex;
